# uwu_agent_engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  uwu_context_db_接入指南.md
crates/agent-character/: Cargo.toml  README.md
crates/agent-character/src/: lib.rs  preferences.rs  values.rs
crates/agent-collaboration/: Cargo.toml  README.md
crates/agent-collaboration/src/: delegate.rs  lib.rs  negotiate.rs  registry.rs
crates/agent-context-db/: Cargo.toml  README.md
crates/agent-context-db/src/: lib.rs  (+3 more)
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: capability.rs  engine.rs  flow.rs  lib.rs  vs_nodes.rs
crates/agent-crdt/: Cargo.toml  README.md
crates/agent-execution/: Cargo.toml  README.md
crates/agent-execution/src/: lib.rs  mcp.rs  output.rs  vs_nodes.rs  wasm.rs
crates/agent-guard/: Cargo.toml  README.md
crates/agent-guard/src/: audit.rs  lib.rs
crates/agent-guard/src/rules/: mod.rs
crates/agent-learning/: Cargo.toml  README.md
crates/agent-learning/src/: guard.rs  lib.rs  skill.rs  trigger.rs
crates/agent-learning/src/conditions/: mod.rs
crates/agent-memory/: Cargo.toml  README.md
crates/agent-memory/src/: consolidate.rs  embedding.rs  lib.rs  retrieve.rs  types.rs  unified.rs  vs_nodes.rs
crates/agent-mesh/: Cargo.toml  README.md
crates/agent-mesh/src/: lib.rs  registry.rs  topics.rs
crates/agent-mesh/src/events/: decision.rs  mod.rs  persona.rs  state.rs  task.rs
crates/agent-metacognition/: Cargo.toml  README.md
crates/agent-metacognition/src/: anomaly.rs  calibrate.rs  evaluate.rs  history.rs  lib.rs  tts.rs
crates/agent-perception/: Cargo.toml  README.md
crates/agent-perception/src/: context.rs  lib.rs  pii.rs  vs_nodes.rs
crates/agent-persona/: Cargo.toml  README.md
crates/agent-persona/src/: history.rs  identity.rs  lib.rs  relationships.rs
crates/agent-reaction/: Cargo.toml  README.md
crates/agent-reaction/src/: lib.rs  stats.rs
crates/agent-reaction/src/rules/: captcha.rs  idle.rs  mod.rs  popup_close.rs  rate_limit.rs
crates/agent-reasoning/: Cargo.toml  README.md
crates/agent-reasoning/src/: lib.rs  reasoner.rs  sandbox.rs  strategies.rs  tot.rs  vs_nodes.rs
crates/agent-session/: Cargo.toml  README.md
crates/agent-session/src/: history.rs  intent.rs  lib.rs  snapshot.rs  turn.rs
crates/agent-sidecar-consolidator/: Cargo.toml  README.md
crates/agent-sidecar-consolidator/src/: lib.rs  main.rs
crates/agent-sidecar-monitor/: Cargo.toml  README.md
crates/agent-sidecar-monitor/src/: lib.rs  main.rs
crates/agent-state/: Cargo.toml  README.md
crates/agent-state-long/: Cargo.toml
crates/agent-state-mid/: Cargo.toml
crates/agent-state-short/: Cargo.toml
crates/agent-state/src/: checkpoint.rs  confidence.rs  diff.rs  evaluate.rs  lib.rs  long.rs  mid.rs  mvcc.rs  short.rs  state.rs
crates/agent-task/: Cargo.toml  README.md
crates/agent-task/src/: delegation.rs  lib.rs  manifest.rs  scheduler.rs  settlement.rs  subtask.rs
crates/agent-tools/: Cargo.toml  README.md
crates/agent-tools/src/: lib.rs
crates/agent-types-core/: Cargo.toml  README.md
crates/agent-types-core/src/: action.rs  agent_id.rs  layer.rs  lib.rs  uncertain.rs
crates/agent-types-ext/: Cargo.toml
crates/agent-types-ext/src/: agent_card.rs  delegation_policy.rs  lib.rs  settlement_policy.rs  task_manifest.rs
crates/agent-uncertainty/: Cargo.toml  README.md
crates/agent-wiki/: Cargo.toml  README.md
crates/agent-wiki/src/: database_store.rs  lib.rs  page.rs  repo.rs  store.rs
pkg/uwu_context_db/: ARCHITECTURE.md
pkg/uwu_context_db/context-db-storage/: Cargo.toml
pkg/uwu_context_db/context-db-storage/src/: lib.rs  pg.rs
pkg/uwu_context_db/context-db-uwu/: Cargo.toml  README.md
pkg/uwu_context_db/context-db-uwu/src/: character_constraint.rs  innovation.rs  lib.rs  llm.rs  mesh_bridge.rs  metacog_bridge.rs  sandbox.rs  state_bridge.rs  wasm.rs
pkg/uwu_context_db/context-db-uwu/tests/: m3_integration.rs
pkg/uwu_crdt/: Cargo.toml
pkg/uwu_crdt/src/: doc.rs  lib.rs
pkg/uwu_crdt/src/primitives/: counter.rs  lww_map.rs  lww_register.rs  mod.rs  or_set.rs  vector_clock.rs
pkg/uwu_database/: Cargo.toml  README.md
pkg/uwu_event_mesh/: Cargo.toml  README.md
pkg/uwu_event_mesh/examples/: basic.rs
pkg/uwu_event_mesh/src/: lib.rs
pkg/uwu_event_mesh/src/bridge/: channel.rs  mod.rs
pkg/uwu_event_mesh/src/core/: envelope.rs  error.rs  metadata.rs  mod.rs  serialized_envelope.rs  topic.rs  type_id.rs  type_registry.rs
pkg/uwu_event_mesh/src/ext/: event_set.rs  filter.rs  idempotency.rs  mod.rs
pkg/uwu_event_mesh/src/mesh/: broker.rs  dedup.rs  flow_handle.rs  mod.rs  ring.rs  subscriber.rs
pkg/uwu_event_mesh/src/store/: filter.rs  memory.rs  mod.rs  segmented.rs  traits.rs
pkg/uwu_event_mesh/src/store/jsonl/: index.rs  mod.rs  store.rs  writer.rs
pkg/uwu_logger/: Cargo.toml  README.md
pkg/uwu_nats_bridge/: Cargo.toml  README.md
pkg/uwu_nats_bridge/src/: config.rs  lib.rs  publisher.rs  subjects.rs  subscriber.rs
pkg/uwu_visual_script/: Cargo.toml  README.md
pkg/uwu_visual_script/src/: error.rs  ir.rs  lib.rs  model.rs  prelude.rs  value.rs  vm.rs
pkg/uwu_visual_script/src/builtin/: compare.rs  debug.rs  events.rs  flow.rs  math.rs  mod.rs  pins.rs  vars.rs
pkg/uwu_visual_script/src/compiler/: context.rs  instantiate.rs  lower.rs  mod.rs  plan.rs  validate.rs
pkg/uwu_visual_script/src/registry/: host.rs  library.rs  mod.rs  runner.rs
pkg/uwu_visual_script/tests/: async_stream.rs  integration.rs
pkg/uwu_wasm/: Cargo.toml  README.md
pkg/uwu_wasm/examples/: concurrent.rs  demo.rs  multi.rs  multi_sandbox.rs  single_tenant_multi_sandbox.rs
pkg/uwu_wasm/src/: lib.rs
pkg/uwu_wasm/src/debug/: mod.rs  timetravel.rs
pkg/uwu_wasm/src/loader/: hotswap.rs  mod.rs
pkg/uwu_wasm/src/runtime/: canary.rs  engine.rs  mod.rs  registry.rs  sandbox.rs
pkg/uwu_wasm/src/security/: attestation.rs  ebpf_bridge.rs  mod.rs  policy.rs
pkg/uwu_wiki/: ARCHITECTURE.md
pkg/uwu_wiki/wiki-llm/: Cargo.toml
pkg/uwu_wiki/wiki-llm/src/: lib.rs  mock.rs  rag.rs
(+58 files in other folders)
