[workspace]
members = [
    ".",
    # 基础设施（已完成）
    "pkg/uwu_database",
    "pkg/uwu_event_mesh",
    "pkg/uwu_nats_bridge",
    "pkg/uwu_logger",
    "pkg/uwu_visual_script",
    "pkg/uwu_wasm",
    # Agent 核心类型
    "crates/agent-types-core",
    "crates/agent-types-ext",
    # Agent 事件网格
    "crates/agent-mesh",
    # Agent 五维
    "crates/agent-state",
    "crates/agent-reaction",
    "crates/agent-metacognition",
    "crates/agent-persona",
    "crates/agent-character",
    # 能力域
    "crates/agent-perception",
    "crates/agent-memory",
    "crates/agent-reasoning",
    "crates/agent-execution",
    # 协作与安全
    "crates/agent-uncertainty",
    "pkg/uwu_crdt",
    "crates/agent-tools",
    "crates/agent-guard",
    "crates/agent-learning",
    # 编排
    "crates/agent-session",
    "crates/agent-task",
    "crates/agent-collaboration",
    "crates/agent-core",
    # Sidecar
    "crates/agent-sidecar-consolidator",
    "crates/agent-sidecar-monitor",
    # 知识库
    "crates/agent-wiki",
    # uwu_wiki 知识库子系统（模块化解耦骨架）
    "pkg/uwu_wiki/wiki-core",
    "pkg/uwu_wiki/wiki-llm",
    "pkg/uwu_wiki/wiki-collab",
    "pkg/uwu_wiki/wiki-table",
    "pkg/uwu_wiki/wiki-graph",
    "pkg/uwu_wiki/wiki-workflow",
    "pkg/uwu_wiki/wiki-testkit",
    # agent-context-db 上下文数据库（M0-M3 模块化解耦骨架）
    "pkg/uwu_context_db/context-db-core",
    "pkg/uwu_context_db/context-db-session",
    "pkg/uwu_context_db/context-db-parse",
    "pkg/uwu_context_db/context-db-compressor",
    "pkg/uwu_context_db/context-db-storage",
    "pkg/uwu_context_db/context-db-wiki",
    "pkg/uwu_context_db/context-db-retrieve",
    "pkg/uwu_context_db/context-db-version",
    "pkg/uwu_context_db/context-db-uwu",
    "pkg/uwu_context_db/context-db-testkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
