[package]
name = "uwu_agent_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
members = [
    ".",
    # 基础设施（已完成）
    "pkg/uwu_logger",
    # Agent 核心类型
    "crates/agent-types-core",
    "crates/agent-types-ext",
    # Agent 事件网格
    "crates/agent-mesh",
    # Agent 五维
    "crates/agent-state",
    "crates/agent-reaction",
    "crates/agent-metacognition",
    "crates/agent-persona",
    "crates/agent-character",
    # 能力域
    "crates/agent-perception",
    "crates/agent-memory",
    "crates/agent-reasoning",
    "crates/agent-execution",
    # 协作与安全
    "crates/agent-uncertainty",
    "crates/agent-tools",
    "crates/agent-guard",
    "crates/agent-learning",
    # 编排
    "crates/agent-session",
    "crates/agent-task",
    "crates/agent-collaboration",
    "crates/agent-core",
    # Sidecar
    "crates/agent-sidecar-consolidator",
    "crates/agent-sidecar-monitor",
    # 知识库
    "crates/agent-wiki",
    # uwu_wiki 知识库子系统
    "pkg/uwu_wiki/crates/wiki-core",
    "pkg/uwu_wiki/crates/wiki-llm",
    "pkg/uwu_wiki/crates/wiki-collab",
    "pkg/uwu_wiki/crates/wiki-table",
    "pkg/uwu_wiki/crates/wiki-graph",
    "pkg/uwu_wiki/crates/wiki-workflow",
    "pkg/uwu_wiki/crates/wiki-testkit",
    # agent-context-db 上下文数据库（M0-M3 模块化解耦骨架）
    "pkg/uwu_context_db/crates/context-db-core",
    "pkg/uwu_context_db/crates/context-db-session",
    "pkg/uwu_context_db/crates/context-db-parse",
    "pkg/uwu_context_db/crates/context-db-compressor",
    "pkg/uwu_context_db/crates/context-db-storage",
    "pkg/uwu_context_db/crates/context-db-wiki",
    "pkg/uwu_context_db/crates/context-db-retrieve",
    "pkg/uwu_context_db/crates/context-db-version",
    "crates/agent-context-db",
    "pkg/uwu_context_db/crates/context-db-testkit",
    # agent-context-db 高级模块（第10-11 crate）
    "pkg/uwu_context_db/crates/context-db-consolidation",
    "pkg/uwu_context_db/crates/context-db-cdt",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }
lru = "0.12"
rand = "0.8"
metrics = "0.23"
