[package]
name = "agent-collaboration"
version = "0.1.0"
edition = "2024"
description = "多 Agent 协作 —— 委派/协商 + AgentRegistry"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
