[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"
description = "Agent 核心——会话管理 + FlowGraph(基于 uwu_visual_script) + FlowEngine + CapabilityRegistry"

[dependencies]
# 五维
agent-state = { path = "../agent-state" }
agent-reaction = { path = "../agent-reaction" }
agent-metacognition = { path = "../agent-metacognition" }
agent-persona = { path = "../agent-persona" }
agent-character = { path = "../agent-character" }
# 领域
agent-types-core = { path = "../agent-types-core" }
agent-types-ext = { path = "../agent-types-ext" }
agent-mesh = { path = "../agent-mesh" }
# 能力域
agent-perception = { path = "../agent-perception" }
agent-memory = { path = "../agent-memory" }
agent-reasoning = { path = "../agent-reasoning" }
agent-execution = { path = "../agent-execution" }
agent-uncertainty = { path = "../agent-uncertainty" }
agent-crdt = { path = "../agent-crdt" }
agent-tools = { path = "../agent-tools" }
# 安全
agent-guard = { path = "../agent-guard" }
agent-learning = { path = "../agent-learning" }
# 基础设施
uwu_visual_script = { path = "../../pkg/uwu_visual_script" }
uwu_event_mesh = { path = "../../pkg/uwu_event_mesh" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
