[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"
description = "Agent 核心 —— FlowGraph + FlowEngine + CapabilityRegistry"

[dependencies]
agent-state = { path = "../agent-state" }
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
