[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"
description = "Agent 核心 —— FlowGraph + FlowEngine + CapabilityRegistry"

[dependencies]
agent-state = { path = "../agent-state" }
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uwu_visual_script = { path = "../../pkg/uwu_visual_script", optional = true }

[features]
default = []
visual-script = ["uwu_visual_script"]
