[package]
name = "agent-execution"
version = "0.1.0"
edition = "2024"
description = "执行域——MCP 工具调用 + Guard 检查 + 结果收集"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
agent-tools = { path = "../agent-tools" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
uwu_visual_script = { git = "https://github.com/StLuFa/uwu_visual_script.git", optional = true }
uwu_wasm = { git = "https://github.com/StLuFa/uwu_wasm.git", optional = true }
anyhow = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
visual-script = ["uwu_visual_script"]
wasm-sandbox = ["uwu_wasm", "anyhow"]
http = ["reqwest"]

[dev-dependencies]
wat = "1"
