[package]
name = "agent-guard"
version = "0.1.0"
edition = "2024"
description = "五层安全闸门 —— 指令/参数/能力/预算/egress，编译期注册不可自提升"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
