[package]
name = "agent-learning"
version = "0.1.0"
edition = "2024"
description = "学习触发 —— LearnNode 条件触发 + SkillTarget 本地/远程 + 自进化防护"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
agent-guard = { path = "../agent-guard" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
