[package]
name = "agent-memory"
version = "0.1.0"
edition = "2024"
description = "统一记忆——向量 DB + 元数据 DB，四型记忆视图，LearnNode 触发时 Guard 博弈"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-types-ext = { path = "../agent-types-ext" }
agent-state = { path = "../agent-state" }
agent-persona = { path = "../agent-persona" }
agent-mesh = { path = "../agent-mesh" }
agent-crdt = { path = "../agent-crdt" }
uwu_database = { path = "../../pkg/uwu_database" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
