[package]
name = "agent-memory"
version = "0.1.0"
edition = "2024"
description = "统一记忆 —— 四型记忆视图 + 向量相似检索 + Episode 巩固"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uwu_visual_script = { git = "https://github.com/StLuFa/uwu_visual_script.git", optional = true }
uwu_database = { git = "https://github.com/StLuFa/uwu_database.git", features = ["vector-memory"], optional = true }

[features]
default = []
visual-script = ["uwu_visual_script"]
database = ["uwu_database"]
