[package]
name = "agent-mesh"
version = "0.1.0"
edition = "2024"
description = "Agent 语义事件网格——对 uwu_event_mesh 的领域包装，定义 Agent 事件类型与 topic 约定"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
uwu_event_mesh = { path = "../../pkg/uwu_event_mesh" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros"] }
