[package]
name = "agent-perception"
version = "0.1.0"
edition = "2024"
description = "感知域——输入解析 + PII 检测与可逆加密 + ContextDescriptor 构建"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
async-trait = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
