[package]
name = "agent-reaction"
version = "0.1.0"
edition = "2024"
description = "反射短路——规则引擎，每步决策前拦截，命中则跳过 LLM"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
