[package]
name = "agent-session"
version = "0.1.0"
edition = "2024"
description = "对话域 —— 持有五维 + 编排 process_turn 主循环"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
agent-reaction = { path = "../agent-reaction" }
agent-metacognition = { path = "../agent-metacognition" }
agent-persona = { path = "../agent-persona" }
agent-character = { path = "../agent-character" }
agent-perception = { path = "../agent-perception" }
agent-memory = { path = "../agent-memory" }
agent-reasoning = { path = "../agent-reasoning" }
agent-execution = { path = "../agent-execution" }
agent-mesh = { path = "../agent-mesh" }
agent-core = { path = "../agent-core" }
agent-task = { path = "../agent-task" }
agent-collaboration = { path = "../agent-collaboration" }
agent-wiki = { path = "../agent-wiki" }
uwu_event_mesh = { path = "../../pkg/uwu_event_mesh" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
