[package]
name = "agent-sidecar-consolidator"
version = "0.1.0"
edition = "2024"
description = "独立巩固进程——消费 consolidation 通道，LearnNode 触发 + Guard 博弈 + State/Persona 持久化"

[[bin]]
name = "consolidator"
path = "src/main.rs"

[dependencies]
agent-memory = { path = "../agent-memory" }
agent-learning = { path = "../agent-learning" }
agent-guard = { path = "../agent-guard" }
agent-mesh = { path = "../agent-mesh" }
agent-types-core = { path = "../agent-types-core" }
uwu_event_mesh = { path = "../../pkg/uwu_event_mesh" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
