[package]
name = "agent-sidecar-consolidator"
version = "0.1.0"
edition = "2024"
description = "独立巩固进程 —— 消费 Episode → LearnTrigger 评估 → Guard 博弈 → Memory 持久化"

[[bin]]
name = "consolidator"
path = "src/main.rs"

[features]
default = []
nats = ["dep:uwu_nats_bridge"]

[dependencies]
agent-memory = { path = "../agent-memory" }
agent-learning = { path = "../agent-learning" }
agent-guard = { path = "../agent-guard" }
agent-types-core = { path = "../agent-types-core" }
agent-state = { path = "../agent-state" }
uwu_nats_bridge = { path = "../../pkg/uwu_nats_bridge", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
