[package]
name = "agent-sidecar-monitor"
version = "0.1.0"
edition = "2024"
description = "独立监控进程 —— 异常检测 + MetacognitiveReport 生成"

[[bin]]
name = "monitor"
path = "src/main.rs"

[features]
default = []
nats = ["dep:uwu_nats_bridge"]

[dependencies]
agent-state = { path = "../agent-state" }
uwu_nats_bridge = { git = "https://github.com/StLuFa/uwu_nats_bridge.git", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
