[package]
name = "agent-state"
version = "0.1.0"
edition = "2024"
description = "Agent 状态——短/中/长程三层 WS + fork()推演沙盒 + MVCC 快照 + diff/evaluate/rollback"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
