[package]
name = "agent-task"
version = "0.1.0"
edition = "2024"
description = "任务域 —— TaskManifest + SubtaskDAG 调度 + SettlementPolicy"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
