[package]
name = "agent-wiki"
version = "0.1.0"
edition = "2024"
description = "Agent Wiki —— 多 Agent 协作的结构化知识库，MVCC 版本化 + 语义检索"

[dependencies]
agent-types-core = { path = "../agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uwu_database = { path = "../../pkg/uwu_database", features = ["vector-memory"], optional = true }

[features]
default = []
database = ["uwu_database"]
