[package]
name = "uwu-crdt"
version = "0.1.0"
edition = "2024"
description = "uwu CRDT：内存无冲突合并算子。手写 CRDT 原语 + Loro 封装（UwuCrdtDoc），供 wiki 协作 / context-db 合并复用"

[dependencies]
agent-types-core = { path = "../../crates/agent-types-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loro = "1"
thiserror = "1"

[features]
default = []
