[package]
name = "uwu_nats_bridge"
version = "0.1.0"
edition = "2024"
description = "NATS/JetStream bridge for uwu_event_mesh — cross-process pub/sub with durable streams"

[dependencies]
uwu_event_mesh = { path = "../uwu_event_mesh" }
async-nats = "0.35"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
