[package]
name = "wiki-llm"
version = "0.1.0"
edition = "2024"
description = "uwu_wiki LLM 横切层：领域无关 LlmCapability + TextUnit，LlmClient 注入，不依赖引擎"

[dependencies]
wiki-core = { path = "../wiki-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[features]
default = []
hybrid-search = []
full-text = []
